cluster/krakend-stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: infra-stage
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: api-stage.ginbits.com
    http:
      paths:
      - backend:
          service:
            name: krakend-service
            port:
              number: 8080
        path: /
        pathType: Prefix
